Modifies javascript to unfold portfolio content on clicking the div, not the h2 Adds z-index to portfolio content div to fix unclickable portfolio content bug

--- a/app/assets/stylesheets/portfolio.css
+++ b/app/assets/stylesheets/portfolio.css
@@ -64,6 +64,8 @@ div.divider {
 @media (max-width: 940px) {
   #portfolio-content {
     overflow: auto;
+    position: relative;
+    z-index: 10;
   }
   div#portfolio-content h2 {
     margin-top: 0;
